--- a/html/index.html
+++ b/html/index.html
@@ -14,15 +14,15 @@
       <section>
         <h2>Creating a github repository</h2>
         <ul>
-          <li><a href="creating_github_without_readme.html">Creating a github repository without a readme</a></li>
-          <li><a href="creating_github_with_readme.html">Creating a github repository with a readme</a></li>
+          <li><a href="./creating_github_without_readme.html">Creating a github repository without a readme</a></li>
+          <li><a href="./creating_github_with_readme.html">Creating a github repository with a readme</a></li>
         </ul>
       </section>
       <section>
         <h2>Syncing local project with Github Repository</h2>
         <ul>
-          <li><a href="syncing_github_without_readme.html">Syncing a local project with a github repository without a readme</a></li>
-          <li><a href="syncing_github_with_readme.html">Syncing a local project with a github repository with a readme</a></li>
+          <li><a href="./syncing_github_without_readme.html">Syncing a local project with a github repository without a readme</a></li>
+          <li><a href="./syncing_github_with_readme.html">Syncing a local project with a github repository with a readme</a></li>
         </ul>
       </section>
       <br>
