fixing heroku paths

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <header>
@@ -14,20 +14,20 @@
       <section>
         <h2>Creating a github repository</h2>
         <ul>
-          <li><a href="./creating_github_without_readme.html">Creating a github repository without a readme</a></li>
-          <li><a href="./creating_github_with_readme.html">Creating a github repository with a readme</a></li>
+          <li><a href="html/creating_github_without_readme.html">Creating a github repository without a readme</a></li>
+          <li><a href="html/creating_github_with_readme.html">Creating a github repository with a readme</a></li>
         </ul>
       </section>
       <section>
         <h2>Syncing local project with Github Repository</h2>
         <ul>
-          <li><a href="./syncing_github_without_readme.html">Syncing a local project with a github repository without a readme</a></li>
-          <li><a href="./syncing_github_with_readme.html">Syncing a local project with a github repository with a readme</a></li>
+          <li><a href="html/syncing_github_without_readme.html">Syncing a local project with a github repository without a readme</a></li>
+          <li><a href="html/syncing_github_with_readme.html">Syncing a local project with a github repository with a readme</a></li>
         </ul>
       </section>
       <br>
       <span class="note">Note: Anything with a <strong>{}</strong> curly bracket around it requires a custom input</span>
     </div>
-    <script src="../js/index.js" charset="utf-8"></script>
+    <script src="js/index.js" charset="utf-8"></script>
   </body>
 </html>
