--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         </ul>
       </section>
       <section>
+        <h2>Creating a github repository</h2>
+        <ul>
+          <li><a href="html/creating_github_without_readme.html">Creating a github repository without a readme</a></li>
+          <li><a href="html/creating_github_with_readme.html">Creating a github repository with a readme</a></li>
+        </ul>
+      </section>
+      <section>
         <h2>Syncing local project with Github Repository</h2>
         <ul>
           <li><a href="html/syncing_github_without_readme.html">Syncing a local project with a github repository without a readme</a></li>
