--- a/html/creating_github_with_readme.html
+++ b/html/creating_github_with_readme.html
@@ -19,7 +19,7 @@
       </ul>
       <ol>
         <li id="step1">
-          <p>Go to your Github home page, <strong>github.com/{github_user_name}</strong>, and click on the "new" green button</p>
+          <p>Go to your Github home page, <strong>github.com/{github_user_name}</strong>, (i.e. for me it is github.com/ccny-wd-2020), and click on the "new" green button</p>
           <img class="github-images" src="../images/github_shared/step1.png">
         </li>
         <li id="step2">
