--- a/html/syncing_github_with_readme.html
+++ b/html/syncing_github_with_readme.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Syncing Github With README</title>
-    <link rel="stylesheet" href="../css/syncing_github_with_readme.css">
     <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
@@ -18,6 +17,7 @@
         <li><a href="#step3">Step 3</a></li>
         <li><a href="#step4">Step 4</a></li>
         <li><a href="#step5">Step 5</a></li>
+        <li><a href="#video">Video</a></li>
       </ul>
       <ol>
         <li id="step1">
@@ -58,6 +58,12 @@
           <img class="github-images" src="../images/syncing_github_with_readme/step5.png">
         </li>
       </ol>
+      <br>
+      <div id="video">
+        <video style="display: block; margin: 0 auto;" width="640" height="480" controls>
+          <source src="../videos/creating_syncing_pushing_readme.mov" type="video/mp4">
+        </video>
+      </div>
     </div>
     <script src="../js/index.js" charset="utf-8"></script>
   </body>
