adding more content and fixing some stuff

--- a/html/syncing_github_without_readme.html
+++ b/html/syncing_github_without_readme.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="/index.html" class="header-links">Home</a>
+      <a href="../index.html" class="header-links">Home</a>
     </header>
     <div class="content">
       <h1>Creating a Github Repository without a README</h1>
@@ -16,6 +16,7 @@
         <li><a href="#step2">Step 2</a></li>
         <li><a href="#step3">Step 3</a></li>
         <li><a href="#step4">Step 4</a></li>
+        <li><a href="#video">Video</a></li>
       </ul>
       <ol>
         <li id="step1">
@@ -49,6 +50,13 @@
           <img class="github-images" src="../images/syncing_github_without_readme/step4.png">
         </li>
       </ol>
+      <br>
+      <div id="video">
+        <h1 class="center-text">Demonstration Video</h1>
+        <video style="display: block; margin: 0 auto;" width="640" height="480" controls>
+          <source src="../videos/creating_syncing_pushing.mov" type="video/mp4">
+        </video>
+      </div>
     </div>
     <script src="../js/index.js" charset="utf-8"></script>
   </body>
