--- a/html/creating_github_without_readme.html
+++ b/html/creating_github_without_readme.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="/index.html" class="header-links">Home</a>
+      <a href="../index.html" class="header-links">Home</a>
     </header>
     <div class="content">
       <h1>Creating a Github Repository without a README</h1>
