--- a/html/syncing_github_with_readme.html
+++ b/html/syncing_github_with_readme.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="/index.html" class="header-links">Home</a>
+      <a href="../index.html" class="header-links">Home</a>
     </header>
     <div class="content">
       <h1>Creating a Github Repository with a README</h1>
@@ -60,6 +60,7 @@
       </ol>
       <br>
       <div id="video">
+        <h1 class="center-text">Demonstration Video</h1>
         <video style="display: block; margin: 0 auto;" width="640" height="480" controls>
           <source src="../videos/creating_syncing_pushing_readme.mov" type="video/mp4">
         </video>
