--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
     <div class="content">
       <h1>Basics Home Page</h1>
       <section>
-        <h2>Creating a github repository</h2>
+        <h2>Creating a github repository with a README</h2>
         <ul>
-          <li><a href="html/creating_github_without_readme.html">Creating a github repository without a readme</a></li>
           <li><a href="html/creating_github_with_readme.html">Creating a github repository with a readme</a></li>
         </ul>
       </section>
       <section>
-        <h2>Creating a github repository</h2>
+        <h2>Creating a github repository without a README</h2>
         <ul>
           <li><a href="html/creating_github_without_readme.html">Creating a github repository without a readme</a></li>
-          <li><a href="html/creating_github_with_readme.html">Creating a github repository with a readme</a></li>
         </ul>
       </section>
       <section>
