adding another lesson

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
           <li><a href="html/syncing_github_with_readme.html">Syncing a local project with a github repository with a readme</a></li>
         </ul>
       </section>
+      <section>
+        <h2>Cloning a Github Repository</h2>
+        <ul>
+          <li><a href="html/cloning_empty_github_repository.html">Cloning an empty github repository</a></li>
+        </ul>
+      </section>
       <br>
       <span class="note">Note: Anything with a <strong>{}</strong> curly bracket around it requires a custom input</span>
     </div>
