--- a/html/cloning_empty_github_repository.html
+++ b/html/cloning_empty_github_repository.html
@@ -15,6 +15,7 @@
         <li><a href="#step1">Step 1</a></li>
         <li><a href="#step2">Step 2</a></li>
         <li><a href="#step3">Step 3</a></li>
+        <li><a href="#video">Video</a></li>
       </ul>
       <ol>
         <li id="step1">
