adding files and then deploying to heroku

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
           <li><a href="html/cloning_empty_github_repository.html">Cloning an empty github repository</a></li>
         </ul>
       </section>
+      <section>
+        <h2>Pushing to Heroku</h2>
+        <ul>
+          <li><a href="html/pushing_to_heroku.html">Pushing Site to Heroku</a></li>
+        </ul>
+      </section>
       <br>
       <span class="note">Note: Anything with a <strong>{}</strong> curly bracket around it requires a custom input</span>
     </div>
