--- a/html/pushing_to_heroku.html
+++ b/html/pushing_to_heroku.html
@@ -27,9 +27,9 @@
       <br>
       <div id="video">
         <h1 class="center-text">Demonstration Video</h1>
-        <!-- <video style="display: block; margin: 0 auto;" width="640" height="480" controls>
-          <source src="../videos/creating_syncing_pushing_readme.mov" type="video/mp4">
-        </video> -->
+        <video style="display: block; margin: 0 auto;" width="640" height="480" controls>
+          <source src="../videos/pushing_to_heroku.mov" type="video/mp4">
+        </video>
       </div>
     </div>
     <script src="../js/index.js" charset="utf-8"></script>
