adding pushing to host page

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         </ul>
       </section>
       <section>
-        <h2>Pushing to Heroku</h2>
+        <h2>Pushing to Internet</h2>
         <ul>
           <li><a href="html/pushing_to_heroku.html">Pushing Site to Heroku</a></li>
+          <li><a href="html/pushing_to_host.html">Pushing Site to Paid Host</a></li>
         </ul>
       </section>
       <br>
