--- a/front-end/html/questions.html
+++ b/front-end/html/questions.html
@@ -11,6 +11,7 @@
     </header>
     <div class="content">
       <h1>Questions Board</h1>
+      <h2>Ask a Question</h2>
       <div class="question-form-div">
         <form id="question-form">
           <label>Name</label>
@@ -23,6 +24,8 @@
           <br><br>
           <input type="submit" value="Submit">
         </form>
+        <h2>Questions</h2>
+        <div class="questions"></div>
       </div>
     </div>
     <script src="../js/index.js" charset="utf-8"></script>
