--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -11,13 +11,14 @@
         <span id="header-basics">Welcome to the Basics</span>
         <span>
           <a id="questions-link" href="/questions">Questions</a>
+          <a id="questions-link" href="/ask-question">Ask a Question</a>
         </span>
       </div>
     </header>
     <div class="content">
       <h1>Basics Home Page</h1>
       <section>
-        <h2>Creating a github repository:</h2>
+        <h2>Creating a github repository</h2>
         <ul>
           <li><a href="/github/creating-repository-with-readme">Creating a github repository with a README</a></li>
           <li><a href="/github/creating-repository-without-readme">Creating a github repository without a README</a></li>
