--- a/front-end/html/questions_answers/ask_a_question.html
+++ b/front-end/html/questions_answers/ask_a_question.html
@@ -8,9 +8,9 @@
   <body>
     <header>
       <a href="/" class="header-links">Home</a>
+      <a href="/questions" class="header-links">Questions</a>
     </header>
     <div class="content">
-      <h1>Questions Board</h1>
       <h2>Ask a Question</h2>
       <div class="question-form-div">
         <form id="question-form">
@@ -24,11 +24,9 @@
           <br><br>
           <input type="submit" value="Submit">
         </form>
-        <h2>Questions</h2>
-        <div class="questions"></div>
       </div>
     </div>
     <script src="../js/index.js" charset="utf-8"></script>
-    <script src="../js/questions.js" charset="utf-8"></script>
+    <script src="../js/questions/ask_a_question.js" charset="utf-8"></script>
   </body>
 </html>
