--- a/front-end/html/instructions/creating_github_without_readme.html
+++ b/front-end/html/instructions/creating_github_without_readme.html
@@ -2,15 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Creating Github With README</title>
+    <title>Creating Github Without README</title>
     <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
     <header>
       <a href="/" class="header-links">Home</a>
+      <a id="questions-link" href="/questions">Questions</a>
+      <a id="questions-link" href="/ask-question">Ask a Question</a>
     </header>
     <div class="content">
-      <h1>Creating a Github Repository with a README</h1>
+      <h1>Creating a Github Repository without a README</h1>
       <ul>
         <li><a href="#step1">Step 1</a></li>
         <li><a href="#step2">Step 2</a></li>
@@ -23,11 +25,11 @@
         </li>
         <li id="step2">
           <p>Have your "Create a new repository" page look just like below, and click on the green "Create Repository" button</p>
-          <img class="github-images" src="../images/creating_github_with_readme/step2.png">
+          <img class="github-images" src="../images/creating_github_without_readme/step2.png">
         </li>
         <li id="step3">
           <p>Once created, this is what your new repository page should look like</p>
-          <img class="github-images" src="../images/creating_github_with_readme/step3.png">
+          <img class="github-images" src="../images/creating_github_without_readme/step3.png">
         </li>
       </ol>
     </div>
