--- a/front-end/html/instructions/pushing_to_heroku.html
+++ b/front-end/html/instructions/pushing_to_heroku.html
@@ -8,6 +8,8 @@
   <body>
     <header>
       <a href="/" class="header-links">Home</a>
+      <a id="questions-link" href="/questions">Questions</a>
+      <a id="questions-link" href="/ask-question">Ask a Question</a>
     </header>
     <div class="content">
       <h1>Pushing Site to Heroku</h1>
