--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -10,8 +10,8 @@
       <div class="header-links">
         <span id="header-basics">Welcome to the Basics</span>
         <span>
-          <a id="questions-link" href="/questions">Questions</a>
-          <a id="questions-link" href="/ask-question">Ask a Question</a>
+          <a class="header-link" href="/questions">Questions</a>
+          <a class="header-link" href="/ask-question">Ask a Question</a>
         </span>
       </div>
     </header>
