--- a/front-end/html/instructions/cloning_empty_github_repository.html
+++ b/front-end/html/instructions/cloning_empty_github_repository.html
@@ -7,9 +7,14 @@
   </head>
   <body>
     <header>
-      <a href="/" class="header-links">Home</a>
-      <a id="questions-link" href="/questions">Questions</a>
-      <a id="questions-link" href="/ask-question">Ask a Question</a>
+      <div class="header-links">
+        <span id="header-basics">Welcome to the Basics</span>
+        <span>
+          <a class="header-link" href="/">Home</a>
+          <a class="header-link" href="/questions">Questions</a>
+          <a class="header-link" href="/ask-question">Ask a Question</a>
+        </span>
+      </div>
     </header>
     <div class="content">
       <h1>Cloning an empty github repository</h1>
