--- a/front-end/html/questions_answers/questions.html
+++ b/front-end/html/questions_answers/questions.html
@@ -7,8 +7,13 @@
   </head>
   <body>
     <header>
-      <a href="/" class="header-links">Home</a>
-      <a href="/ask-question" class="header-links">Ask a Question</a>
+      <div class="header-links">
+        <span id="header-basics">Welcome to the Basics</span>
+        <span>
+          <a href="/" class="header-link">Home</a>
+          <a href="/ask-question" class="header-link">Ask a Question</a>
+        </span>
+      </div>
     </header>
     <div class="content">
       <h1>Questions Board</h1>
