--- a/front-end/html/questions_answers/ask_a_question.html
+++ b/front-end/html/questions_answers/ask_a_question.html
@@ -7,8 +7,13 @@
   </head>
   <body>
     <header>
-      <a href="/" class="header-links">Home</a>
-      <a href="/questions" class="header-links">Questions</a>
+      <div class="header-links">
+        <span id="header-basics">Welcome to the Basics</span>
+        <span>
+          <a href="/" class="header-link">Home</a>
+          <a href="/questions" class="header-link">Questions</a>
+        </span>
+      </div>
     </header>
     <div class="content">
       <h2>Ask a Question</h2>
