--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -20,6 +20,13 @@
       <section>
         <h2>Creating a github repository</h2>
         <ul>
+          <li><a href="/javascript/running-front-end">Running a Javascript File on the Front End (Browser Side)</a></li>
+          <li><a href="/javascript/running-back-end">Running a Javascript File on the Back End (Server Side)</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Creating a github repository</h2>
+        <ul>
           <li><a href="/github/creating-repository-with-readme">Creating a github repository with a README</a></li>
           <li><a href="/github/creating-repository-without-readme">Creating a github repository without a README</a></li>
         </ul>
