fixing some things. should be final heroku push before releasing

--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -18,7 +18,7 @@
     <div class="content">
       <h1>Basics Home Page</h1>
       <section>
-        <h2>Creating a github repository</h2>
+        <h2>Running Javascript Files</h2>
         <ul>
           <li><a href="/javascript/running-front-end">Running a Javascript File on the Front End (Browser Side)</a></li>
           <li><a href="/javascript/running-back-end">Running a Javascript File on the Back End (Server Side)</a></li>
