--- a/front-end/html/instructions/running_javascript_front_end.html
+++ b/front-end/html/instructions/running_javascript_front_end.html
@@ -34,10 +34,10 @@
           <p>Put contents in the .html file and the .js file.<br>a. For the contents in the .html file, there needs to be a script tag that connects the javascript file to the html file. Place this script tag right above the closing of the body tab. The "src" field in the script tag represents the path to the connecting javascript file. This is how my html file looks:<br><img src="../images/running_javascript_front_end/html.png"/><br>b. For the .js file, the contents should be a simple console log. This is how my javascript file looks:<br><img src="../images/running_javascript_front_end/js.png"/></p>
         </li>
         <li id="step3">
-          <p>Get the path to that .html. I am using the "atom" text editor, which allows me to copy the path to a file.</p>
+          <p>Get the exact path of that html file. I am using the "atom" text editor, which allows me to copy the path to a file. My exact path looks like "/Users/jaredthomas/Desktop/my_project/index.html" on a mac.</p>
         </li>
         <li id="step4">
-          <p>Paste the path to that .html into your browser. I am pasting into my Google Chrome Browser.</p>
+          <p>Paste the path to that html into your browser. I am pasting into my Google Chrome Browser.</p>
         </li>
         <li id="step5">
           <p>These instructions are strictly for Google Chrome. Right click on the browser, and open up Google Inspect. Go to the console tab, and you should see the console log from your javascript file</p>
