added lesson for npm install

--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -45,6 +45,12 @@
         </ul>
       </section>
       <section>
+        <h2>Node.js</h2>
+        <ul>
+          <li><a href="/node/npm-install">Running NPM Install within project</a></li>
+        </ul>
+      </section>
+      <section>
         <h2>Hosting Application</h2>
         <ul>
           <li><a href="/heroku/pushing">Pushing Site to Heroku</a></li>
