--- a/front-end/html/questions_answers/questions.html
+++ b/front-end/html/questions_answers/questions.html
@@ -12,6 +12,7 @@
         <span>
           <a href="/" class="header-link">Home</a>
           <a href="/ask-question" class="header-link">Ask a Question</a>
+          <a class="header-link" href="/social-network">Social Network</a>
         </span>
       </div>
     </header>
