--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -12,6 +12,7 @@
         <span>
           <a class="header-link" href="/questions">Questions</a>
           <a class="header-link" href="/ask-question">Ask a Question</a>
+          <a class="header-link" href="/social-network">Social Network</a>
         </span>
       </div>
     </header>
@@ -48,7 +49,7 @@
         <h2>Node.js</h2>
         <ul>
           <li><a href="/node/npm-install">Running NPM Install within project</a></li>
-        </ul>
+	</ul>
       </section>
       <section>
         <h2>Hosting Application</h2>
