--- a/front-end/html/instructions/running_javascript/running_javascript_front_end.html
+++ b/front-end/html/instructions/running_javascript/running_javascript_front_end.html
@@ -13,6 +13,7 @@
           <a class="header-link" href="/">Home</a>
           <a class="header-link" href="/questions">Questions</a>
           <a class="header-link" href="/ask-question">Ask a Question</a>
+          <a class="header-link" href="/social-network">Social Network</a>
         </span>
       </div>
     </header>
