--- a/front-end/html/questions_answers/ask_a_question.html
+++ b/front-end/html/questions_answers/ask_a_question.html
@@ -12,6 +12,7 @@
         <span>
           <a href="/" class="header-link">Home</a>
           <a href="/questions" class="header-link">Questions</a>
+          <a class="header-link" href="/social-network">Social Network</a>
         </span>
       </div>
     </header>
